[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"

[dependencies]
mlir-sys = "0.1"
once_cell = "1"

[dev-dependencies]
indoc = "1.0.7"
insta = "1.22.0"
pretty_assertions = "1.3.0"
