[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[dependencies]
mlir-sys = "0.2"
once_cell = "1"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"
pretty_assertions = "1.3.0"
