[package]
name = "melior-macro"
description = "Internal macros for Melior"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
readme = "../README.md"
keywords = ["mlir", "llvm"]

[lib]
proc-macro = true

[dependencies]
comrak = { version = "0.29.0", default-features = false }
convert_case = "0.6.0"
proc-macro2 = "1"
quote = "1"
regex = "1.11.0"
syn = { version = "2", features = ["full"] }
tblgen = { version = "0.4.0", features = [
  "llvm19-0",
], default-features = false, package = "tblgen-alt" }
unindent = "0.2.3"

[dev-dependencies]
melior = { path = "../melior", features = ["ods-dialects"] }
mlir-sys = "0.3.0"
pretty_assertions = "1.4.1"
