[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.19.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[features]
ods-dialects = []

[dependencies]
melior-macro = { version = "0.12.1", path = "../macro" }
mlir-sys = "0.3.0"

[dev-dependencies]
indoc = "2.0.5"
insta = "1.41.1"
pretty_assertions = "1.4.1"
