[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.20.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mlir-sys/melior"
documentation = "https://mlir-sys.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[features]
ods-dialects = []
# Enable the BlockExt trait (requires ods feature)
helpers = ["ods-dialects"]

[dependencies]
melior-macro = { version = "0.13.1", path = "../macro" }
mlir-sys = "0.4.1"

[dev-dependencies]
indoc = "2.0.5"
insta = "1.41.1"
pretty_assertions = "1.4.1"
